web-infras/parser/tests/fixtures/babel/core/uncategorised/371/output.txt
[SyntaxError]: invalid left value (1,1)
1|1--
 |^
